--- a/views/stoc.ejs
+++ b/views/stoc.ejs
@@ -28,7 +28,8 @@
         }
     </style>
 
-    <table class="col-lg-8 offset-lg-2 mt-5 stoc">
+    <h3 class="text-center mt-4">Stoc Live</h3>
+    <table class="col-lg-8 offset-lg-2 mt-2 stoc">
         <tr>
             <th>Denumire</th>
             <th>UM</th>
