--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,9 @@ body{
 .container{
     font-family: 'Playfair Display', serif; 
 }
+.cont{
+    font-family: 'Playfair Display', serif; 
+}
 .navbar{
     font-family: 'Playfair Display', serif;
     background-color: #97c8eb;
@@ -56,7 +59,7 @@ body{
     flex-direction:row;
     align-items: baseline;
     width: 100%;
-    margin: 20px 0 20px 10px;
+    /* margin: 20px 0 20px 10px; */
 }
 
 .raport-wrapper button{
@@ -65,9 +68,9 @@ body{
  box-shadow: 0 1px 5px 3px rgba(0,0,0,0.12);
 }
 
-.raport-wrapper button:nth-of-type(1){
+/* .raport-wrapper button:nth-of-type(1){
     margin-left: auto;
-}
+} */
 
 .raport-wrapper div{
     cursor: pointer;
@@ -95,40 +98,38 @@ body{
 
 
 .contix{
-    margin-top:10px;
+    /* margin-top:10px; */
+    padding-left: 25px;
+    width: 100%;
     background-color: #db7f8e;
     border-radius: 8px;
-    box-shadow: 0 6px 8px 7px rgba(0,0,0,0.1.5);
+    box-shadow: 0 6px 8px 7px rgba(0,0,0,0.15);
 }
 
 
 #search{
    border-right: 1px solid black;
-   height: 400px;
-   display: flex;
-   flex-direction: row;
-   align-items: flex-start;
-   flex-wrap: wrap;
-   align-content:space-between;
+   max-height: 540px;
+   /* display: flex; */
+   /* flex-direction: row; */
+   /* align-items: flex-start; */
+   /* flex-wrap:wrap ; */
+   /* align-content:space-between; */
    overflow: auto;
 }
-
-.catWrapper{
-    
+#testRow {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    align-content:space-between;
     overflow: auto;
 }
 
 
+
 .btnProd{
     height: 100px;
-    width: 150px;
+    width: 170px;
     border-radius: 5px;
-    font-size: 27px;
+    font-size: 24px;
+    line-height: 0.9;
     text-align: center;
     background-color: #90e0ef;
     margin: 20px 0 0 20px;
@@ -140,7 +141,7 @@ body{
 
 .btnCat{
     height: 100px;
-    width: 160px;
+    width: 180px;
     border-radius: 5px;
     font-size: 28px;
     text-align: center;
@@ -148,7 +149,7 @@ body{
     margin: 20px 0 0 20px;
     box-shadow: 0 1px 5px 3px rgba(0,0,0,0.12);
     display: flex; 
-    /* align-items: center;  */
+    align-items: center; 
     justify-content: center;
 }
 
@@ -210,7 +211,7 @@ body{
 
 #search i{
     height: 100px;
-    width: 160px;
+    width: 170px;
     border-radius: 5px;
     font-size: 55px;
     text-align: center;
@@ -359,7 +360,7 @@ body{
 
 .total{
     width: 100%;
-    height: 50px;
+    height: 90px;
     font-size: 28px;
     font-weight: 500;
     padding-bottom: 66px;
@@ -408,7 +409,7 @@ body{
 .modal-footer #nrMasa {
     border: none;
     border-radius: 6px;
-    margin:0 80px 0 10px;
+    margin:0 40px 0 10px;
     width: 80px;
     box-shadow: 2px 0px 5px rgba(0,0,0,0.2)
 }
