--- a/views/factura.ejs
+++ b/views/factura.ejs
@@ -62,7 +62,7 @@
                         <input type="text" class="form-control" name="factura[clientCif]" id="cifNir"
                             aria-describedby="locatie" value="" placeholder="CIF" required>
                         <input type="text" class="form-control hide" name="factura[clientId]" id="furId"
-                            aria-describedby="locatie" value="" required>
+                            aria-describedby="locatie" value="">
                     </div>
                     <div class="search-res" id="search-res">
 
