--- a/views/locatie/loginUser.ejs
+++ b/views/locatie/loginUser.ejs
@@ -13,6 +13,6 @@
                 <input type="password" name="user[parola]" class="form-control" id="password" required>
             </div>
             <button type="submit" class="btn btn-success">Intră</button>
-            <a href="/locatie/user/register" class="btn btn-primary mt-2">Rgister</a>
+            <a href="/locatie/user/register" class="btn btn-primary mt-2">Register</a>
         </div>
     </form>
